# serializer version: 1
# name: test_application_info
  dict({
    'version': <AwesomeVersion SemVer '1.9.4'>,
  })
# ---
# name: test_application_info.1
  dict({
    'version': '1.9.4',
  })
# ---
# name: test_streams_get[empty]
  dict({
  })
# ---
# name: test_streams_get[one stream]
  dict({
    'camera.12mp_fluent': dict({
      'producers': list([
        dict({
          'url': 'rtsp://test:test@192.168.10.105:554/Preview_06_sub',
        }),
      ]),
    }),
  })
# ---
# name: test_streams_get[without producers]
  dict({
    'camera.12mp_fluent': dict({
      'producers': list([
      ]),
    }),
  })
# ---
# name: test_webrtc_offer
  dict({
    'sdp': 'v=0...',
    'type': 'answer',
  })
# ---
